--- a/daydream/package.json
+++ b/daydream/package.json
@@ -18,6 +18,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.3",
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
     "google-map-react": "^2.2.1",
     "moment": "^2.30.1",
